boinc (5.10.30-4) unstable; urgency=low

  * NOT RELEASED YET

  [ Frank S. Thomas ]
  * debian/manpages/update-boinc-applinks.xml: Fixed Lintian's informational
    tag "I: hyphen-used-as-minus-sign" by enclosing options in <command>
    elements with the <option> element.

 -- Frank S. Thomas <fst@debian.org>  Thu, 03 Jan 2008 13:19:16 +0100

boinc (5.10.30-3) unstable; urgency=low

  [ Frank S. Thomas ]
  * debian/patches/:
    - Renamed 201_missing_headers_for_gcc4.3.patch to 102_... because it has
      been applied upstream in r14436.
    - Added 103_fix_terminal_activity_detection.patch to fix the activity
      detection in terminal applications. (closes: #448982)
  * debian/rules: Pass "LDFLAGS=-Wl,--as-needed" to configure in order to
    remove unnecessary library dependencies.
  * debian/boinc-client.postinst: Changed the default permission of the
    global_prefs_override.xml conffile from 0644 to 0664 so that local
    preferences are saved when GUI RPCs are used to set them. (closes: #458007)

 -- Frank S. Thomas <fst@debian.org>  Mon, 31 Dec 2007 10:28:34 +0100

boinc (5.10.30-2) unstable; urgency=low

  [ Frank S. Thomas ]
  * debian/rules: Wrote get-orig-source target which fetches the latest tagged
    BOINC version.
  * debian/patches/:
    - Added 201_missing_headers_for_gcc4.3.patch which adds missing C++
      headers to several source files. This is required to fix a FTBFS with
      recent GCC 4.3 snapshots. Thanks to Martin Michlmayr <tbm@cyrius.com>
      for the bug report. (closes: #456041)
    - Added 101_fix_memory_detection_on_kfreebsd.patch from upstream r14415
      based on a patch by Andrew Deason <adeason2@uiuc.edu> which fixes memory
      detection on Debian GNU/kFreeBSD. (closes: #456586)

 -- Frank S. Thomas <fst@debian.org>  Thu, 20 Dec 2007 06:23:54 +0100

boinc (5.10.30-1) unstable; urgency=low

  [ Frank S. Thomas ]
  * New upstream release.
  * debian/boinc-client.default: Removed --return_results_immediately from the