@@ -28,23 +28,25 @@ endif
 
 # change BOINC platform i486-pc-linux-gnu to i686-pc-linux-gnu 
 ifeq ($(DEB_HOST_GNU_TYPE), i486-linux-gnu)
-  TYPE_FLAGS += --target i686-linux-gnu --program-prefix="" \
-    --with-boinc-platform=i686-pc-linux-gnu
+  TYPE_FLAGS += --with-boinc-platform=i686-pc-linux-gnu
 endif
 
 # change BOINC platform i486-pc-kfreebsd-gnu to i686-pc-kfreebsd-gnu to be
 # consistent with the official BOINC platform i686-pc-linux-gnu
 ifeq ($(DEB_HOST_GNU_TYPE), i486-kfreebsd-gnu)
-  TYPE_FLAGS += --target i686-kfreebsd-gnu --program-prefix="" \
-    --with-boinc-platform=i686-pc-kfreebsd-gnu
+  TYPE_FLAGS += --with-boinc-platform=i686-pc-kfreebsd-gnu
+endif
+
+# change BOINC platform powerpc-unknown-linux-gnu to powerpc-linux-gnu
+ifeq ($(DEB_HOST_GNU_TYPE), powerpc-linux-gnu)
+  TYPE_FLAGS += --with-boinc-platform=powerpc-linux-gnu
 endif
 
 # change BOINC platform powerpc64-unknown-linux-gnu to ppc64-linux-gnu and
 # declare powerpc-unknown-linux-gnu as alternate platform
 ifeq ($(DEB_HOST_GNU_TYPE), powerpc64-linux-gnu)
-  TYPE_FLAGS += --target ppc64-linux-gnu --program-prefix="" \
-    --with-boinc-platform=ppc64-linux-gnu \
-    --with-boinc-alt-platform=powerpc-unknown-linux-gnu
+  TYPE_FLAGS += --with-boinc-platform=ppc64-linux-gnu \
+    --with-boinc-alt-platform=powerpc-linux-gnu
 endif
 
 # declare i686-pc-kfreebsd-gnu as alternate BOINC platform for
